# signal_trainer

./: .gitignore  CLAUDE.md  pyproject.toml
configs/: default.yaml  gaf.yaml  multi_scale.yaml  risk_return.yaml
docs/plans/: 2026-02-06-signal-trainer-design.md
signal_trainer/: __main__.py  cli.py  config.py  pipeline.py
signal_trainer/data/: feature_store.py  label.py  signal_loader.py
signal_trainer/features/: base.py  gaf.py  money_flow.py  technical.py
signal_trainer/models/: __init__.py  base.py  cnn.py  lgbm.py
signal_trainer/split/: splitters.py
tests/: test_smoke.py
