[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "signal-trainer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "tushare-db",
]

[project.scripts]
signal-trainer = "signal_trainer.cli:main"
